@@ -59,6 +59,6 @@ TimelineLabelsView::do_paint (wxGraphicsContext* gc, list<dcpomatic::Rect<int> >
 	int const h = _timeline.track_height ();
 	gc->SetFont (gc->CreateFont(wxNORMAL_FONT->Bold(), wxColour (0, 0, 0)));
 	gc->DrawText (_("Video"), 0, h / 2);
-	gc->DrawText (_("Subtitles"), 0, 3 * h / 2);
+	gc->DrawText (_("Subtitles"), 0, 5 * h / 2);
 	gc->DrawText (_("Audio"), 0, h + max (_timeline.tracks(), 2) * h / 2);
 }
